force-app/main/default/objects/RTL_Campaign_Member_History__c/RTL_Campaign_Member_History__c.object-meta.xml
<CustomObject>
    <label>Campaign Member History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Member History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>