force-app/main/default/objects/RTL_Campaign_Member_History__c/fields/RTL_Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_Member_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>