force-app/main/default/objects/RTL_Campaign_Member_History__c/fields/RTL_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>