force-app/main/default/objects/RTL_Campaign_Member_History__c/fields/RTL_Lead__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Campaign Member Histories</relationshipLabel>
    <relationshipName>Campaign_Member_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>