force-app/main/default/objects/RTL_Campaign_Member_History__c/fields/RTL_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>RTL_Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Member_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>